--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
     </script>
 
-    <title>React App</title>
+    <title>WAYS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
